add d2sqlite submodule and sqlite amalg

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "sqlite"]
-    path = submodules/sqlite
-    url = https://github.com/sqlite/sqlite.git
-
-[submodule "d2sqlite3"]
-    path = submodules/d2sqlite3
-    url = https://github.com/dlang-community/d2sqlite3.git
+[submodule "deps/d2sqlite"]
+	path = deps/d2sqlite
+	url = https://github.com/dlang-community/d2sqlite3.git
